--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,37 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 17%;
+  margin-top: 5%;
 }
 
 .inputz {
   padding: 1%;
+}
+
+.big {
+  font-size: 150%;
+}
+
+.rk {
+  border: 1px solid rgb(65, 255, 0);
+  border-radius: 0%;
+  padding: 10px;
+  margin-top: 5%;
+}
+
+.feed {
+  border: 1px solid rgb(65, 255, 0);
+  border-radius: 0%;
+  padding: 15px;
+  width: 20%; 
+  margin-left: 40%;
+  
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  
 }
 
 .btn{
@@ -26,12 +52,18 @@
   border-radius: 0%;
   padding: 10px;
   width: 7%;
+  margin-left: 1%;
+  margin-top: 1%;
 }
 
 .header {
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid rgb(65, 255, 0);
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-top: 1%;
  }
 
 .App {
